--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "concept-a-back",
   "version": "1.0.0",
-  "type": "module",
   "description": "API for managing and assigning grades to students",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc src/server.ts",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:seed": "npx prisma db seed"
   },
@@ -25,15 +24,15 @@
     "backend",
     "grades",
     "concepts",
-    "postgresql",
+    "prisma",
     "express"
   ],
   "author": "Thiago Nascimento",
   "license": "MPL-2.0",
   "bugs": {
-    "url": "https://github.com/nascimentoliveira/concept-A-back/issues"
+    "url": "https://github.com/nascimentoliveira/concept-A-back-2/issues"
   },
-  "homepage": "https://github.com/nascimentoliveira/concept-A-back#readme",
+  "homepage": "https://github.com/nascimentoliveira/concept-A-back-2#readme",
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
@@ -42,7 +41,9 @@
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.4",
+    "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
