--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
-    "@types/pg": "^8.6.6",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
@@ -52,7 +51,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
-    "joi": "^17.7.0",
-    "pg": "^8.8.0"
+    "joi": "^17.7.0"
   }
 }
