--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for managing and assigning grades to students",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc src/server.ts",
+    "build": "ttsc -p tsconfig.json",
     "start": "node dist/server.js",
     "dev": "nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -41,6 +41,7 @@
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
+    "ttypescript": "^1.5.15",
     "typescript": "^4.9.4",
     "typescript-transform-paths": "^3.4.6"
   },
