--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "concept-a-back",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "description": "API for managing and assigning grades to students",
   "main": "dist/index.js",
   "scripts": {
-    "build": "ttsc -p tsconfig.json",
+    "build": "ttsc -p tsconfig.build.json",
     "start": "node dist/server.js",
-    "dev": "nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma:seed": "npx prisma db seed"
+    "migration:run": "prisma migrate deploy",
+    "migration:generate": "npm run dev:load-envs prisma migrate dev",
+    "test": "cross-env NODE_ENV=test jest --passWithNoTests --runInBand",
+    "test:migration:run": "npm run test:load-envs prisma migrate deploy",
+    "test:migration:generate": "npm run test:load-envs prisma migrate dev",
+    "test:watch": "jest --watch --passWithNoTests --runInBand",
+    "test:load-envs": "dotenv -e .env.test",
+    "test:seed": "npm run test:load-envs prisma db seed",
+    "dev:load-envs": "dotenv -e .env.development",
+    "dev:migration:run": "npm run dev:load-envs prisma migrate deploy",
+    "dev:migration:generate": "npm run dev:load-envs prisma migrate dev",
+    "dev:seed": "npm run dev:load-envs prisma db seed",
+    "dev": "cross-env NODE_ENV=development nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -36,9 +46,16 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.0.0",
+    "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "ttypescript": "^1.5.15",
@@ -50,6 +67,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "joi": "^17.7.0"
